# kaomoji_scrapper

./: .envrc  .pdm.toml  LICENSE  README.md  pyproject.toml  todo.norg
kaomoji/: links.json  main.py  utils.py
kaomoji/data/: kaomojis_1.tsv
kaomoji/data/emoticons/: kaomoji_actions_dancing.tsv  kaomoji_actions_less-fun.tsv  kaomoji_actions_natural.tsv  kaomoji_actions_others.tsv  kaomoji_animals_pets.tsv  kaomoji_animals_wild-animals.tsv  kaomoji_edge_cases_misc.tsv  kaomoji_emotions_negative.tsv  kaomoji_emotions_neutral.tsv  kaomoji_emotions_positive.tsv  kaomoji_misc_character-and-meme.tsv  kaomoji_misc_more_misc.tsv  kaomojis_1.tsv  splatmoji.tsv
kaomoji/gui/: qt_gui.py
kaomoji/scrapper/: __init__.py  fetch_kaomoji_ru.py
kaomoji/scrapper/japaneseemoticons/: links.json  links.py  loader.py
