[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "icecream>=2.1.3",
    "ruff>=0.0.215",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "vsedov", email = "viv.sedov@hotmail.com"},
]
dependencies = [
    "selenium>=4.7.2",
    "beautifulsoup4>=4.11.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
