[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "icecream>=2.1.3",
    "ruff>=0.0.215",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "vsedov", email = "viv.sedov@hotmail.com"},
]
dependencies = [
    "selenium>=4.7.2",
    "beautifulsoup4>=4.11.1",
    "pyqt5>=5.15.7",
    "Xlib>=0.21",
    "pyautogui>=0.9.53",
    "PySimpleGUI>=4.60.4",
    "icecream>=2.1.3",
    "click>=8.1.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}
